--- a/public/movieindex.html
+++ b/public/movieindex.html
@@ -1,5 +1,5 @@
 <!-- Write your code below -->
- <h1> The best movies according to Aulia</h1>
+ <h1> The best movies according to Farhan</h1>
  <p>
 <h2> Top 3 Movies of all time</h2>
  <hr>
