--- a/index.html
+++ b/index.html
@@ -1,77 +1,88 @@
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <h1>Farhan's Portfolio</h1>
+    <title>My Resume</title>
   </head>
   <body>
-    <h1>I am web developer</h1>
-    <hr />
-    <h1>Movie Ranking Project</h1>
-    <h2>The Best Movies According To Farhan</h2>
-    <p></p>
-    <h2>Top 3 Movies of all time</h2>
-    <hr />
-    <h2>The Lord of the ring</h2>
-    <p>This is a high-fantasy adventure movie series.</p>
-    <h2>Breaking bed</h2>
+    <img src="./farhan.jpeg" alt="Resume photo" height="150" />
+    <h1>Md Farhan Almas</h1>
+    <p>Vilnius, Lithuania</p>
+    <p>Phone Number: +37063527586</p>
     <p>
-      This series is all about drugs and my most favourite person is Heisenberg.
+      Email:<a href="mailto:farhanalmas694@gmail.com"
+        >farhanalmas694@gmail.com</a
+      >
     </p>
-    <h2>Money Heist</h2>
-    <p>Money Heist is a crime-thriller heist series. Really fun to watch.</p>
     <hr />
-
-    <h1>Birthday Invite Project</h1>
-    <h2>It's My Birthday</h2>
-    <h2>On the 20th of December</h2>
-    <img
-      src="./assets/images/birthday-invite.png"
-      height="200"
-      alt="movie ranking project preview"
-    />
-
-    <h>This is where you need to go</h>
-    <h3>
-      <a href="./public/birthday-invite.html" Birthday Invite project></a>
-
-      <a href="./public/contact.html">contact me</a>
-      <a href="./public/about.html">About me></a>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-    </h3>
-
-    <!-- TODO 2: Add Your previous projects' HTML into the public folder -->
-
-    <!-- TODO 3: Take screenshots of your project previews and add the images to the images folder -->
-
-    <!-- TODO 4: Add titles/subtitles etc. -->
-
-    <!-- TODO 5: Add a link to the project pages -->
-
-    <!-- TODO 6: Add images to show the project previews
-HINT for TODO 6: You can use the height attribute set to 200 to make the image smaller:
-https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img#attr-height -->
-
-    <!-- TODO 7: Add the Contact Me and About Me page links -->
+    <h1>Profile Summary</h1>
+    <p>
+      Motivated and disciplined Full Stack Web Developer currently studying at
+      SMK College of Applied Sciences. Passionate about building modern,
+      responsive websites and continuously improving coding skills. Strong work
+      ethic, quick learner, and focused on achieving long-term career growth in
+      tech.
+    </p>
+    <hr />
+    <h1>Education</h1>
+    <h2>SMK College Of Applied Sciences, Lithuania</h2>
+    <p>Professional Bachelor In Programming And Multimedia</p>
+    <p>(Currently Enrolled)</p>
+    <hr />
+    <h1>Skills</h1>
+    <ul>
+      <li>Full Stack Web Developer</li>
+      <li>HTML, CSS, JavaScript</li>
+      <li>Python Basic</li>
+      <li>UI/UX Fundamentals</li>
+      <li>Git & GitHub</li>
+      <li>Problem Solving</li>
+      <li>Fast Learner</li>
+      <li>Strong Communication Skills</li>
+    </ul>
+    <hr />
+    <h1>Projects</h1>
+    <h3>Portfolio Website</h3>
+    <a href="./indexxx.html">My Portfolio</a>
+    <hr />
+    <h1>Experience</h1>
+    <p>Student Developer (Learning & Training)</p>
+    <p>SMK College of Applied Sciences</p>
+    <ul>
+      <li>Developing skills in front-end and back-end technologies</li>
+      <li>Practicing real-world coding tasks and small projects</li>
+      <li>Working on portfolio and improving development workflow</li>
+    </ul>
+    <hr />
+    <h1>Languages</h1>
+    <ul>
+      <li>English - Fluent</li>
+      <li>Bangla - Native</li>
+      <li>Lithuanian - Learning (A1 Level)</li>
+    </ul>
+    <hr />
+    <h1>Interests</h1>
+    <p>
+      Web development, technology, entrepreneurship, coding challenges, and
+      self-improvement.
+    </p>
   </body>
 </html>
