--- a/indexxx.html
+++ b/indexxx.html
@@ -1,77 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <h1>Farhan's Portfolio</h1>
-  </head>
-  <body>
-    <h1>I am web developer</h1>
-    <hr />
-    <h1>Movie Ranking Project</h1>
-    <h2>The Best Movies According To Farhan</h2>
-    <p></p>
-    <h2>Top 3 Movies of all time</h2>
-    <hr />
-    <h2>The Lord of the ring</h2>
-    <p>This is a high-fantasy adventure movie series.</p>
-    <h2>Breaking bed</h2>
-    <p>
-      This series is all about drugs and my most favourite person is Heisenberg.
-    </p>
-    <h2>Money Heist</h2>
-    <p>Money Heist is a crime-thriller heist series. Really fun to watch.</p>
-    <hr />
-
-    <h1>Birthday Invite Project</h1>
-    <h2>It's My Birthday</h2>
-    <h2>On the 20th of December</h2>
-    <img
-      src="./assets/images/birthday-invite.png"
-      height="200"
-      alt="movie ranking project preview"
-    />
-
-    <h>This is where you need to go</h>
-    <h3>
-      <a href="./public/birthday-invite.html" Birthday Invite project></a>
-
-      <a href="./public/contact.html">contact me</a>
-      <a href="./public/about.html">About me></a>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-    </h3>
-
-    <!-- TODO 2: Add Your previous projects' HTML into the public folder -->
-
-    <!-- TODO 3: Take screenshots of your project previews and add the images to the images folder -->
-
-    <!-- TODO 4: Add titles/subtitles etc. -->
-
-    <!-- TODO 5: Add a link to the project pages -->
-
-    <!-- TODO 6: Add images to show the project previews
-HINT for TODO 6: You can use the height attribute set to 200 to make the image smaller:
-https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img#attr-height -->
-
-    <!-- TODO 7: Add the Contact Me and About Me page links -->
-  </body>
+    <head>
+        <meta charset="UTF-8">
+        <title>Farhan's Portfolio</title>
+        </head>
+        <body>
+            <h1>I'm a Web developer</h1>
+            <hr>
+            <h3><a href="./public/movieindex.html">Movie Ranking Project</a></h3>
+            <img src="./public/movie-project.png" height="200" alt="Movie Ranking Project preview"/>
+            <hr>
+            <h3><a href="./public/BIrthday-Invite-project-index.html">Birthday Invite Project</a></h3>
+            <a href="./About.html"><img src="./BIrthday Invite.png" height="200" alt="Birthday Invite Project Preview"></a>
+           <a href="./About.html">About me</a>
+            <a href="./Contact.html">Contact me</a>
+        </body>
 </html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
